# docker_template_python

./: .dockerignore  .gitignore  .pylintrc  LICENSE  Pipfile  README.md  docker-compose.yml
.circleci/: config.yml
.github/workflows/: ci.yml  style.yml  test.yml
docker/python/: Dockerfile
source/: Pipfile  pyproject.toml
source/src/: hello.py
source/tests/: test_hello.py
